--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <name>iron_mobot</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="rmuthukumar203at@gmail.com">iam_ironman_2003</maintainer>
+  <maintainer email="shajithannababu@gmail.com">iam_ironman_2003</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
